Focus grabbing by the Title (summary) field in the Event Editor breaks the Escape keyboard shortcut for read-only events after viewing a writable event
While testing another (completely unrelated) branch now, I have found a small hard-to-spot regression introduced by @TheEvilSkeleton's !421 (merged), present in main
, that occurs in some very specific order of steps:
- Open the event editor for a writable event
- Press
Escape
to close the event editor - Open the event editor for a read-only event
- Try to press
Escape
to close the event editor
Result: nothing happens, because the focus is on the Title widget (which is insensitive) instead of the window.
Workaround: you can press Tab
to change the focused widget in that window, which makes Escape
work again.
Expected result: Escape
should still work.
I think that in the specific case of read-only events, focus could be set on the Done
button instead (because other than the lock icon, I think the Done button is the only widget that is going to remain sensitive after !419; testing with that MR right now, I also see that pressing Tab
in this situation leads to the "Done" button getting focused first anyway).